# urology-inference-holoscan-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  CODEBASE_INDEX.md  DOCKER_README.md  Dockerfile  INSTALLATION.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  USAGE_GUIDE.md  VIDEO_ENCODER_IMPLEMENTATION.md  X11_INTEGRATION_SUMMARY.md  docker-compose.x11.yml  docker-compose.yml  docker-quick-start.sh  metadata.json
data/: README.md
data/config/: pipeline_control_config.yaml
doc/: PYTHON_CPP_COMPARISON.md  README.md  YOLO_POSTPROCESSOR_ANALYSIS.md  YOLO_POSTPROCESSOR_EVALUATION_SUMMARY.md  YOLO_POSTPROCESSOR_OUTPUT_EVALUATION.md  YOLO_POSTPROCESSOR_OUTPUT_EVALUATION_SUMMARY.md  YOLO_SEG_POSTPROCESSOR_IO.md
doc/alternative_solutions/: 01_tensor_factory_pattern.md  02_hybrid_cpu_gpu_approach.md  03_custom_visualization_operator.md  04_unified_detection_tensor.md  05_holoviz_plug_and_play_tensor.md  README.md
doc/planning/: HOLOVIZ_COMPATIBILITY_ANALYSIS.md  HOLOVIZ_OPTIMAL_REFACTORING_PLAN.md  IMPLEMENTATION_PROGRESS.md  OPTIMAL_SOLUTION_ANALYSIS.md  YOLO_POSTPROCESSOR_REFACTORING_PLAN.md
doc/work_logs/: 2024-07-11_work_log.md  2024-07-12_todo.md  2024-07-12_work_log.md
include/: holoscan_fix.hpp  urology_app.hpp  version.hpp.in
include/config/: app_config.hpp
include/operators/: gxf_safe_passthrough.hpp  holoviz_common_types.hpp  holoviz_compatible_tensors.hpp  holoviz_native_yolo_postprocessor.hpp  holoviz_static_config.hpp  holoviz_tensor_factory.hpp  plug_and_play_detection.hpp  plug_and_play_yolo_postprocessor.hpp  simple_pause_control.hpp  yolo_seg_postprocessor.hpp
include/utils/: cv_utils.hpp  error_handler.hpp  gxf_state_monitor.hpp  logger.hpp  performance_monitor.hpp  yolo_utils.hpp
scripts/: build.sh  build_optimized.sh  build_run_x11_forward.sh  docker-build.sh  docker-entrypoint.sh  install_video_encoder_deps.sh  run.sh  run_headless_large_data.sh  run_memory_optimized.sh  run_with_memory.sh  verify_video_encoder_deps.sh
scripts/debug/: build_and_run.sh  convert_videos.sh  fix_x11_in_container.sh  quick_test_x11.sh  run_official_ngc.sh  run_with_full_x11.sh  run_with_holohub_x11.sh  run_with_holohub_x11_fixed.sh  run_with_ssh_x11_fix.sh  run_with_x11.sh  setup_and_run_x11.sh  setup_x11_fixed.sh  setup_x11_official.sh
src/: hello_world.cpp  main.cpp  simple_inference_test.cpp  simple_minimal_app.cpp  simple_test.cpp  test_postprocessor_only.cpp  test_without_postprocessor.cpp  urology_app.cpp
src/config/: app_config.cpp  app_config.yaml  app_config_new.cpp  labels.yaml
src/operators/: dummy_receiver.cpp  holoviz_native_yolo_postprocessor.cpp  passthrough.cpp  plug_and_play_yolo_postprocessor.cpp  video_encoder_ops.cpp  yolo_seg_postprocessor.cpp  yolo_seg_postprocessor.cu
src/utils/: cv_utils.cpp  error_handler.cpp  gxf_state_monitor.cpp  holoviz_compatible_tensors.cpp  holoviz_static_config.cpp  holoviz_tensor_factory.cpp  logger.cpp  performance_monitor.cpp  plug_and_play_tensor_factory.cpp  yolo_utils.cpp
tests/integration/: test_holoviz_integration.cpp
tests/performance/: benchmark_yolo.cpp
tests/unit/: test_config.cpp  test_holoviz_foundation.cpp  test_holoviz_native_postprocessor.cpp
